@startuml

class Data{
    integer id
    string name
    timeStamp createdAt
    timeStamp updatedAt
}

class User{
    string email
    string password

    +signUp()
    +logIn()
    +logOut()
}

class Category{
    integer userId

    +create()
    +read()
    +update()
    +delete()
}

class Task{
    datetime deadLine
    float priority
    string memo
    boolean completed
    integer userId
    integer categoryId

    +create()
    +read()
    +update()
    +delete()
}

Data<|-- User
Data<|---- Category
Data<|---- Task

User "1" -- "1..*" Category
Category "1" -- "0..*" Task

@enduml